# Source

./: MainActivity.cs  Test.txt  Testing  my_app.csproj
ATM/: build.xml
ATM/WebContent/: myAtm.html
ATM/junit/: TEST-atmTest.AllTests.xml
ATM/src/atm/: AtmServlet.java  result.java  withdraw.java
ATM/src/atmTest/: atmFunction.java  atmFunctionTest.java
Age_Calculator/: build.xml  pom.txt  sonar-project.properties
Age_Calculator/WebContent/: all.css  index.html
Age_Calculator/WebContent/WEB-INF/: web.xml
Age_Calculator/junit/: TEST-CalculatorPkg.AllTests.xml  TEST-CalculatorPkg.Calculator_Tests.xml
Age_Calculator/src/CalculatorPkg/: AgeServlet.java  AllTests.java  Calculator_Tests.java  CustomerData.java
App/DotNetProject/: HelloCI.sln  pom.xml  sonar-project.properties
App/DotNetProject/HelloCI.Web/: HelloCI.Web.csproj
App/DotNetProject/HelloCI.Web.UnitTests/: HelloCI.Web.UnitTests.csproj
CplusProject/: Hello_world.deb  Package-2.0.0.deb
CplusProject/Hello_World/: CMakeLists.txt
CplusProject/Hello_World/HelloWorldPackage/DEBIAN/: control
CplusProject/Hello_World/src/: test.cpp
CplusProject/Make_SquareRoot/: MakeFile.txt  Makefile  sonar-project.properties
CplusProject/Make_SquareRoot/src/: Squarerootfunc.cpp
CplusProject/Sample_CPP/: Makefile  Makefile.txt.txt
CplusProject/Sample_CPP/src/: test.cpp
CplusProject/SquareRoot/: CMakeLists.txt  sonar-project.properties
CplusProject/SquareRoot/src/: Squarerootfunc.cpp  main.cpp  test.cpp
CplusProject/Testing/: Makefile
CplusProject/Testing/src/: test.cpp
CubeGenerator/: Service-API.dockerfile  pom.xml
DotNetProject/: CodeCoverage.runsettings  CodeCoverage.testrunconfig  HelloCI.Web.vsmdi  HelloCI.nuspec  TestSettings.testsettings  UpgradeLog.htm  sonar-project.properties
DotNetProject/HelloCI.Web/: HelloCI.Web.csproj
DotNetProject/HelloCI.Web.UnitTests/ControllerTests/: HomeControllerTests.cs
DotNetProject/HelloCI.Web/Properties/: AssemblyInfo.cs  HelloCI.nuspec
HelloApp/: HelloApp.csproj  HelloApp.sln  MainActivity.cs
HelloApp/HelloApp/: MainActivity.cs
HelloApp/HelloApp.Test/: 1.txt  MainActivity.cs
HelloApp/HelloApp.Test/Properties/: AndroidManifest.xml
HelloApp/HelloApp/Properties/: AndroidManifest.xml
HelloApp/Properties/: AndroidManifest.xml  AssemblyInfo.cs
HelloApp/Resources/: Resource.Designer.cs
HelloApp/Resources/layout/: Main.axml
HelloApp/Resources/values/: Strings.xml
JavaWebApp/SimpleCustomerApp/: .project  sonar-project.properties
Library_Management/: build.xml  pom.xml  sonar-project.properties
Library_Management/WebContent/: index.jsp  result.jsp  search.jsp
Library_Management/junit/: TEST-com.librarymanagement.test.AllTests.xml
OnlineBookingService/: build.xml  sonar-project.properties
OnlineBookingService/WebContent/: Movies-list.jsp  TicketBooking.jsp  final.jsp  index.html  pay.jsp  sign-up.css
OnlineBookingService/junit/: TEST-TestRun..AllTests.xml  TEST-TestRun.AllTests.xml  TEST-TestRun.TestBooking.xml
OnlineBookingService/src/TestRun/: AllTests.java  TestBooking.java  TicketData.java
Properties/: AndroidManifest.xml
Python/AreaCalculator/: README.txt  WID_PYTHON_BAT.bat  area_calculator.py  setup.py  sonar-project.properties  test_area_calculator.py
Python/AreaCalculator/AreaCalculator/: __init__.py  test_area_calculator.py
RocheSCA/: build.xml
SampleWebApp/: build.xml  sonar-project.properties
SampleWebApp/WebContent/: index.jsp  ip.jsp  success.jsp
SampleWebApp/WebContent/WEB-INF/: web.xml
SampleWebApp/junit/: TEST-com.roo.sample.test.AllTests.xml  TEST-com.roo.sample.test.customerTest.xml
SampleWebApp/src/: servlet.java
Sample_ATM/: sonar-project.properties
Sample_ATM/WebContent/WEB-INF/: web.xml
Sample_ATM/junit/: TEST-atmTest.atmFunctionTest.xml
Sample_ATM/src/atm/: deposit.java
Sample_project/: LocMetrics.html  LocMetricsFiles.csv  LocMetricsFolders.csv  LocMetricsFunctions.html
Sample_project/css/: app.css
Sample_project/js/: app_angular.js
SimpleCustomerApp/: build.xml  sonar-project.properties
SimpleCustomerApp/Library_Management/: build.xml
SimpleCustomerApp/WebContent/: Customer.jsp  Learning.html  Welcome.jsp  index.html
SimpleCustomerApplication/: pom.xml  sonar-project.properties
SimpleCustomerApplication/WebContent/: Customer.jsp  Learning.html  Welcome.jsp  index.html
SpringAPP/: Service-API.dockerfile  pom.xml
Student/: Service-API.dockerfile  pom.xml  sonar-project.properties
StudentRegistration/: build.xml  sonar-project.properties
StudentRegistration/WebContent/: Administrator.jsp  VerifyDetails.jsp  login.jsp  success.jsp
StudentRegistration/junit/: TEST-com.studentregistration.test.AllTests.xml  TEST-com.studentregistration.test.LoginTesting.xml
Test_dotnetUpload/: Test_dotnetUpload.sln
Test_dotnetUpload/Test_dotnetUpload/: Test_dotnetUpload.csproj
Test_dotnetUpload_2/: Test_dotnetUpload.sln
Test_dotnetUpload_2/Test_dotnetUpload/: Class1.cs
UserInf/: build.xml  sonar-project.properties
UserInf/WebContent/: stud.jsp
UserInf/junit/: TEST-userInf.AllTests.xml  TEST-userInf.infotest.xml
UserInformation/: build.xml  sonar-project.properties
UserInformation/WebContent/: form_input.html
UserInformation/junit/: TEST-mypkg.userInputTest.xml  TESTS-TestSuites.xml  all-tests.html  allclasses-frame.html  overview-frame.html  overview-summary.html
bloodbank/: build.xml  sonar-project.properties
bloodbank/WebContent/: A+.jsp  A-.jsp  answer.jsp  available.jsp  index.jsp  login.jsp  register.jsp
bloodbank/junit/: TEST-com.testcase.AllTests.xml  TEST-com.testcase.test.xml
env_provisioning/: winrmvm.azuredeploy.json  winrmvm.azuredeploy.parameters.json
logindetails/: build.xml  sonar-project.properties
logindetails/WebContent/: home.jsp  index.jsp
logindetails/junit/: TEST-AllTests.xml  TEST-logindetails.AllTests.xml  TEST-logindetails.infotest.xml
my_app/: UpgradeLog.htm  UpgradeLog2.htm  my_app.sln
my_app/Tests/: Tests.cs  Tests.csproj
sample_db_application/: sample_db_application.sql
(+88 files in other folders)
